--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.0.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-formly": "^2.0.1"
+	}
 }
