--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sendgrid/mail": "^7.7.0",
+		"@sendinblue/client": "^3.2.1",
 		"mailtrap": "^3.0.0",
 		"svelte-formly": "^2.0.1"
 	}
